<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/textNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="number"
        android:hint="@string/nim"/>

    <Spinner
        android:id="@+id/spinnerFaculty"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:entries="@array/faculty"/>

    <Spinner
        android:id="@+id/spinnerMajor"
        android:layout_width="330dp"
        android:layout_height="45dp"/>

    <Spinner
        android:id="@+id/spinnerClass"
        android:layout_width="330dp"
        android:layout_height="45dp"/>

    <Button
        android:id="@+id/buttonSignUpForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

</LinearLayout>